test/conformance/kuttl/mutate/clusterpolicy/standard/mutate-node-status/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: advertise-resource
spec:
  background: false
  rules:
    - name: advertise-resource
      match:
        resources:
          kinds:
            - Node/status
      mutate:
        patchesJson6902: |-
          - op: add
            path: "/status/capacity/example.com~1dongle"
            value: "4"
