test/conformance/kuttl/mutate/clusterpolicy/standard/mutate-node-status/02-script.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: ./modify-resource-filters.sh removeNode
  - script: ./send-request-to-status-subresource.sh
